[package]
name = "marked"
version = "0.3.0"
authors = ["David Kellum <dek-oss@gravitext.com>"]
edition = "2021"
rust-version = "1.80"
license       = "MIT/Apache-2.0"
description   = "Parsing, filtering, selecting and serializing HTML/XML markup."
repository    = "https://github.com/dekellum/marked"
readme        = "README.md"
keywords      = ["html", "sanitization"]
categories    = ["web-programming", "text-processing"]
build         = "build.rs"

[lib]
doctest = false

[dependencies]
html5ever       = { version="0.27.*" }
tendril         = { version="0.4.*", features=["encoding_rs"] }
encoding_rs     = { version="0.8.12" } # Match tendril dependency
xml-rs          = { version="0.8.*", package="xml-rs", optional=true }
string_cache    = { version="0.8.*" }
mime            = { version="0.3.14" }
log             = { version="0.4.*", features = ["std"] }

[features]
default = []
xml = ["xml-rs"]
cargo-clippy = []

[dev-dependencies]
rand            = { version=">=0.7.0, <0.8" }
markup5ever_rcdom = { git="https://github.com/dekellum/html5ever", branch="rcdom" }

[package.metadata.docs.rs]
features = ["xml"]
